# BaronyPA

./: .gitignore  CMakeLists.txt  README.md  plugin.c  plugin.cpp  premake5.lua  update_instructions
bundle/: manifest.xml
cmake/: TargetArch.cmake
include/: MumbleAPI_v_1_0_x.h  MumblePlugin_v_1_0_x.h
